--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <script>
         // --- 1. CONFIGURATION ---
-        const SUPABASE_URL = 'https://jcoucgppzoppppqaflhot.supabase.co'; // Paste your URL here
+        const SUPABASE_URL = 'https://jcoucgppzopppqaflhot.supabase.co'; // Paste your URL here
         const SUPABASE_KEY = 'sb_publishable_CUvcKUf28jz2qJstu7Iaqw_P4L_Igv-'; // Paste your Key here
         
         const { createClient } = supabase;
@@ -128,4 +128,5 @@
         }
     </script>
 </body>
+
 </html>
